--- a/backend/src/main/resources/static/admin.html
+++ b/backend/src/main/resources/static/admin.html
@@ -21,7 +21,7 @@
 
 <div class="modal-overlay" ng-if="showEditModal">
     <div class="modal-content">
-        <h3>Edit Account #00{{editingAcc.id}}</h3>
+        <h3>Edit Account #{{editingAcc.accountId}}</h3>
         <p style="font-size: 0.85rem; color: #666; margin-bottom: 20px;">
             Leave fields blank to keep current values.
         </p>
@@ -97,13 +97,15 @@
                 <form ng-submit="transferMoney()">
                     <div class="form-group">
                         <label>Source Account</label>
-                        <select ng-model="transferData.sourceId" ng-options="acc.id as (acc.username + ' (#' + acc.id + ')') for acc in accounts" required>
+                        <select ng-model="transferData.sourceId"
+                                ng-options="acc.id as acc.username for acc in accounts" required>
                             <option value="">-- Select Source --</option>
                         </select>
                     </div>
                     <div class="form-group">
                         <label>Destination Account</label>
-                        <select ng-model="transferData.destinationId" ng-options="acc.id as (acc.username + ' (#' + acc.id + ')') for acc in accounts" required>
+                        <select ng-model="transferData.destinationId"
+                                ng-options="acc.id as acc.username for acc in accounts" required>
                             <option value="">-- Select Recipient --</option>
                         </select>
                     </div>
@@ -129,7 +131,7 @@
                     <table class="transaction-table">
                         <thead>
                         <tr>
-                            <th>ID</th>
+                            <th>Account ID</th>
                             <th>Username</th>
                             <th>Role</th>
                             <th>Balance</th>
@@ -139,7 +141,7 @@
                         <tbody>
                         <tr ng-repeat="acc in (filteredAccounts = (accounts | filter:{username: searchUser})) | limitTo:5:accPage*5"
                             ng-style="acc.role === 'DISABLED' && {'opacity': '0.6', 'background-color': '#f8f9fa'}">
-                            <td>#00{{acc.id}}</td>
+                            <td>#{{acc.accountId}}</td>
                             <td><strong>{{acc.username}}</strong></td>
                             <td>
                                 <span class="role-badge"
@@ -151,8 +153,12 @@
                             <td>
                                 <button ng-click="openEditModal(acc)" class="btn-refresh" style="background: #ffc107; padding: 4px 8px; font-size: 0.8rem; border-color: #e0a800; color: #000;">Edit</button>
 
-                                <button ng-if="acc.role !== 'DISABLED'" ng-click="deleteAccount(acc.id)" class="btn-logout" style="padding: 4px 8px; font-size: 0.8rem;">Disable</button>
-                                <button ng-if="acc.role === 'DISABLED'" ng-click="enableAccount(acc.id)" class="btn-primary" style="padding: 4px 8px; font-size: 0.8rem; background-color: #28a745; width: auto; border: none;">Enable</button>
+                                <button ng-if="acc.role !== 'DISABLED' && acc.id !== loggedUserId"
+                                        ng-click="deleteAccount(acc.id)" class="btn-logout"
+                                        style="padding: 4px 8px; font-size: 0.8rem;">Disable</button>
+
+                                <button ng-if="acc.role === 'DISABLED'" ng-click="enableAccount(acc.id)"
+                                        class="btn-primary" style="padding: 4px 8px; font-size: 0.8rem; background-color: #28a745; width: auto; border: none;">Enable</button>
                             </td>
                         </tr>
                         <tr ng-if="filteredAccounts.length === 0">
